web-api/deployment/web-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ausnews-web-api
  labels:
    app: ausnews-web-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ausnews-web-api
  template:
    metadata:
      labels:
        app: ausnews-web-api
    spec:
      containers:
        - name: ausnews-web-api
          image: ausnews-web-api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "600Mi"
#      nodeSelector:
#        cloud.google.com/gke-nodepool: non-vespa
